[project]
name = "mcp-tavily-proxy"
version = "0.1.0"
description = "Tavily MCP Server with HTTP/HTTPS Proxy Support"
authors = [
    {name = "tulong66", email = "your.email@example.com"},
]
dependencies = [
    "tavily-python",
    "mcp",
    "pydantic",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-dir = "src"

[project.scripts]
mcp-tavily-proxy = "mcp_server_tavily.__main__:main"